Fixed overflow issue to make website appear more responsive and aligned items column-wise in center through media queries.

--- a/Using Basic Technologies/assets/css/style.css
+++ b/Using Basic Technologies/assets/css/style.css
@@ -10,6 +10,11 @@
     font-style: normal;
 }
 
+/* Extra Important CSS Code */
+body{
+    overflow-x: hidden;
+}
+
 main h1{
     color: #973131;
     text-shadow: 1px 1px 4px #660909;
@@ -143,6 +148,10 @@ header a>button:hover{
         padding: 50px;
         height: 300px;
         width: 300px;
+        text-align: center;
+    }
+    .landing-item1>h1{
+        text-align: center;
     }
 }
 
@@ -193,12 +202,19 @@ header a>button:hover{
         grid-template-areas: "mission-item1"
                             "mission-item2"; 
         height: fit-content;
+        width: 100vw;
         gap: 0;
         font-size: 0.5rem;
     }
-    .mission-section>img{
-        height: 70px;
-        width: 70px;
+    .mission-item1{
+        display: flex;
+        /* justify-content: center; */
+        align-items: center;
+    }
+    .mission-item1>img{
+        height: 300px;
+        width: 300px;
+        
         /* margin-bottom: 0; */
     }
     .mission-section>p{
@@ -208,6 +224,7 @@ header a>button:hover{
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        /* flex-wrap: wrap; */
     }
 
 }
